UIEXT-748: Address review comments: Remove update method in BE + minor adjustments
UIEXT-748 (Add type field to ColumnSelection)